@@ -1,3 +1,7 @@
+17 September 2018: Wouter
+	- Fix compile on Mac for unbound, provide explicit_bzero when libc
+	  does not have it.
+
 13 September 2018: Wouter
 	- Fix seed for random backup code to use explicit zero when wiped.
 	- exit log routine is annotated as noreturn function.
